--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <div class="btn_container">
+        <button id="rock">ROCK</button>
+        <button paper="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
     <script src="./script.js"></script>
 </body>
 
