Update index.htnl with container for btns, score display, result, winner msg and restart btn

--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
 <body>
     <div class="btn_container">
         <button id="rock">ROCK</button>
-        <button paper="paper">PAPER</button>
+        <button id="paper">PAPER</button>
         <button id="scissors">SCISSORS</button>
     </div>
+
+    <div>
+        <p id="conclusion"></p>
+        <p id="player"></p>
+        <p id="computer"></p>
+        <p id="result"> </p>
+    </div>
+
+    <div id="restart"></div>
+
+
     <script src="./script.js"></script>
 </body>
 
